[package]
name = "fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version = "^1.3", git = "https://github.com/fltk-rs/fltk-rs"}
fl2rust-macro = "0.5"
glob = "0.3.0"
walkdir = "2"
rand = "0.8.5"
fs_extra = "1.2.0"
f128 = "0.2.9"

[build_dependencies]
fl2rust = "0.5"
